--- a/pages/index.html
+++ b/pages/index.html
@@ -12,9 +12,9 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="queries.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../gym/style/style.css" />
+
+  
   </head>
   <body>
     <header class="header">
@@ -45,7 +45,7 @@
 
       <div class="grid">
         <div class="container-1">
-          <img src="spa.jpg" alt="" class="spa-img" />
+          <img src="../gym/media/spa.jpg" alt="" class="spa-img" />
 
           <p class="spa-text">Spa</p>
           <p class="spa-text-2">
@@ -54,7 +54,7 @@
         </div>
 
         <div class="container-1">
-          <img src="equiupments.png" alt="" class="spa-img" />
+          <img src="../gym/media/equiupments.png" alt="" class="spa-img" />
           <p class="spa-text">Equipment</p>
           <p class="spa-text-2">
             Each Powerhouse facility offers high quality cardio & strength
@@ -63,7 +63,7 @@
         </div>
 
         <div class="container-1">
-          <img src="03-personal-trainers.png" alt="" class="spa-img" />
+          <img src="../gym/media/03-personal-trainers.png" alt="" class="spa-img" />
           <p class="spa-text">Personal Trainers</p>
           <p class="spa-text-2">
             Maximize your workout with the help of our personal trainers.
@@ -71,7 +71,7 @@
         </div>
 
         <div class="container-1">
-          <img src="09-247-access.png" alt="" class="spa-img" />
+          <img src="../gym/media/09-247-access.png" alt="" class="spa-img" />
           <p class="spa-text">24/7 Access</p>
           <p class="spa-text-2">
             Workout when the time is right for you with 24/7 access.
@@ -79,7 +79,7 @@
         </div>
 
         <div class="container-1">
-          <img src="08-private-locker-rooms.png" alt="" class="spa-img" />
+          <img src="../gym/media/08-private-locker-rooms.png" alt="" class="spa-img" />
           <p class="spa-text">Private Locker Rooms</p>
           <p class="spa-text-2">
             Our locker rooms is help you be on your way after a workout.
@@ -87,7 +87,7 @@
         </div>
 
         <div class="container-1">
-          <img src="02-group-classes.png" alt="" class="spa-img" />
+          <img src="../gym/media/02-group-classes.png" alt="" class="spa-img" />
           <p class="spa-text">Group Classes</p>
           <p class="spa-text-2">
             We offer classes for yoga, spin, Zumba, Circuit Training, MX4 and
@@ -221,7 +221,7 @@
           </form>
         </div>
         <div>
-          <img src="forms.jpg" alt="" class="contact-image" />
+          <img src="../gym/media/forms.jpg" alt="" class="contact-image" />
         </div>
       </div>
     </section>
