update index file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>fitZone
        </title>
     
-    <link rel="icon" type="image/x-icon" href="../gym/media/download.png">
+    <link rel="icon" type="image/x-icon" href="./media/download.png">
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -15,7 +15,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <link rel="stylesheet" href="../gym/style/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
 
   
   </head>
@@ -48,7 +48,7 @@
 
       <div class="grid">
         <div class="container-1">
-          <img src="../gym/media/spa.jpg" alt="" class="spa-img" />
+          <img src="./media/spa.jpg" alt="" class="spa-img" />
 
           <p class="spa-text">Spa</p>
           <p class="spa-text-2">
@@ -57,7 +57,7 @@
         </div>
 
         <div class="container-1">
-          <img src="../gym/media/equiupments.png" alt="" class="spa-img" />
+          <img src="./media/equiupments.png" alt="" class="spa-img" />
           <p class="spa-text">Equipment</p>
           <p class="spa-text-2">
             Each Powerhouse facility offers high quality cardio & strength
@@ -66,7 +66,7 @@
         </div>
 
         <div class="container-1">
-          <img src="../gym/media/03-personal-trainers.png" alt="" class="spa-img" />
+          <img src="./media/03-personal-trainers.png" alt="" class="spa-img" />
           <p class="spa-text">Personal Trainers</p>
           <p class="spa-text-2">
             Maximize your workout with the help of our personal trainers.
@@ -74,7 +74,7 @@
         </div>
 
         <div class="container-1">
-          <img src="../gym/media/09-247-access.png" alt="" class="spa-img" />
+          <img src="./media/09-247-access.png" alt="" class="spa-img" />
           <p class="spa-text">24/7 Access</p>
           <p class="spa-text-2">
             Workout when the time is right for you with 24/7 access.
@@ -82,7 +82,7 @@
         </div>
 
         <div class="container-1">
-          <img src="../gym/media/08-private-locker-rooms.png" alt="" class="spa-img" />
+          <img src="./media/08-private-locker-rooms.png" alt="" class="spa-img" />
           <p class="spa-text">Private Locker Rooms</p>
           <p class="spa-text-2">
             Our locker rooms is help you be on your way after a workout.
@@ -90,7 +90,7 @@
         </div>
 
         <div class="container-1">
-          <img src="../gym/media/02-group-classes.png" alt="" class="spa-img" />
+          <img src="./media/02-group-classes.png" alt="" class="spa-img" />
           <p class="spa-text">Group Classes</p>
           <p class="spa-text-2">
             We offer classes for yoga, spin, Zumba, Circuit Training, MX4 and
@@ -224,7 +224,7 @@
           </form>
         </div>
         <div>
-          <img src="../gym/media/forms.jpg" alt="" class="contact-image" />
+          <img src="./media/forms.jpg" alt="" class="contact-image" />
         </div>
       </div>
     </section>
